# conan-soil2

./: .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  Readme.md  conandata.yml  conanfile.py  premake5.lua
.github/workflows/: conan.yml
test_package/: conanfile.py  test_package.cpp
